--- a/Untitled/Untitled.tex
+++ b/Untitled/Untitled.tex
@@ -111,21 +111,22 @@ Probity
 
 \end{center}
 
-\section{First Section}
+\section{Minimum Admission Requirements}
 
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
-illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
-voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam
-corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
-Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
-quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo
-voluptas nulla pariatur?
+For admission to the Master of Finance and Investments programme, the
+following requirements shall apply:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  An undergraduate degree in Finance, Economics, Accounting,
+  Mathematics, Statistics or any related quantitative discipline.
+\item
+  A minimum of second class honours for the undergraduate degree.
+\item
+  Where condition (2) is not met, a minimum of 2 years experience in
+  finance and related areas will suffice.
+\end{enumerate}
 
 \subsection{Course Overview}
 
@@ -134,20 +135,22 @@ following courses.
 
 \begin{table}[!h]
 
-\caption{\label{tab:unnamed-chunk-1}Course Structure for the Master of Finance Program}
+\caption{\label{tab:unnamed-chunk-1}Course Structure for the Master of Finance and Investments Program}
 \centering
-\begin{tabu} to \linewidth {>{\raggedright}X>{\raggedright}X>{\raggedright}X>{\raggedright}X>{\raggedright}X}
+\begin{tabu} to \linewidth {>{\raggedright}X>{\raggedright}X>{\raggedright}X>{\raggedright}X}
 \toprule
-SEM\_1 & SEM\_2 & SEM\_3 & SEM\_4 & SEM\_5\\
+SEM\_1 & SEM\_2 & SEM\_3 & SEM\_4\\
 \midrule
-\cellcolor{gray!6}{Intermediate Microeconomics} & \cellcolor{gray!6}{Advanced Microeconomics} & \cellcolor{gray!6}{Intermediate Macroeconomics} & \cellcolor{gray!6}{Research Project} & \cellcolor{gray!6}{Research Project}\\
- &  &  &  \vphantom{2} & \\
-\cellcolor{gray!6}{Introductory Econometrics} & \cellcolor{gray!6}{Financial Econometrics} & \cellcolor{gray!6}{Asset management and portfolio formation} & \cellcolor{gray!6}{International Finance} & \cellcolor{gray!6}{}\\
- &  &  &  \vphantom{1} & \\
-\cellcolor{gray!6}{Financial Statements Analysis and Disclosures} & \cellcolor{gray!6}{Foundations of Finance} & \cellcolor{gray!6}{Corporate Finance and Corporate Governance} & \cellcolor{gray!6}{Banking Operations and Financial Institutions Management} & \cellcolor{gray!6}{}\\
+\cellcolor{gray!6}{Microeconomics} & \cellcolor{gray!6}{Finance Macro-environment Analysis} & \cellcolor{gray!6}{Research Project} & \cellcolor{gray!6}{Research Project}\\
+ &  &  \vphantom{3} & \\
+\cellcolor{gray!6}{Financial Econometrics I} & \cellcolor{gray!6}{Financial Econometrics II} & \cellcolor{gray!6}{Asset Pricing Theory} & \cellcolor{gray!6}{}\\
+ &  &  \vphantom{2} & \\
+\cellcolor{gray!6}{Financial Statements Analysis and Disclosures} & \cellcolor{gray!6}{Corporate Finance and Corporate Governance} & \cellcolor{gray!6}{Banking Operations and Financial Institutions Management} & \cellcolor{gray!6}{}\\
 \addlinespace
- &  &  &  & \\
-\cellcolor{gray!6}{Mathematical Methods for Quantitative Finance} & \cellcolor{gray!6}{Research Methods} & \cellcolor{gray!6}{Emerging Markets and Financial Markets Development} & \cellcolor{gray!6}{Derivatives} & \cellcolor{gray!6}{}\\
+ &  &  \vphantom{1} & \\
+\cellcolor{gray!6}{Mathematical Methods for Finance} & \cellcolor{gray!6}{Financial Economics} & \cellcolor{gray!6}{Derivatives} & \cellcolor{gray!6}{}\\
+ &  &  & \\
+\cellcolor{gray!6}{Research Methods} & \cellcolor{gray!6}{International Finance} & \cellcolor{gray!6}{Elective} & \cellcolor{gray!6}{}\\
 \bottomrule
 \end{tabu}
 \end{table}
@@ -156,29 +159,27 @@ SEM\_1 & SEM\_2 & SEM\_3 & SEM\_4 & SEM\_5\\
 
 \caption{\label{tab:unnamed-chunk-2}Course Structure for the Master of Finance Program}
 \centering
-\begin{tabu} to \linewidth {>{\raggedright}X>{\raggedright}X>{\raggedright}X}
+\begin{tabu} to \linewidth {>{\raggedright}X>{\raggedleft}X}
 \toprule
-No & Semester & Course\\
+Course & Contact\_Hours\\
 \midrule
-\cellcolor{gray!6}{Year\_1} & \cellcolor{gray!6}{SEM\_1} & \cellcolor{gray!6}{Intermediate Microeconomics}\\
-Year\_1 & SEM\_1 & Introductory Econometrics\\
-\cellcolor{gray!6}{Year\_1} & \cellcolor{gray!6}{SEM\_1} & \cellcolor{gray!6}{Financial Statements Analysis and Disclosures}\\
-Year\_1 & SEM\_1 & Mathematical Methods for Quantitative Finance\\
-\cellcolor{gray!6}{Year\_1} & \cellcolor{gray!6}{SEM\_2} & \cellcolor{gray!6}{Advanced Microeconomics}\\
+\cellcolor{gray!6}{Asset Pricing Theory} & \cellcolor{gray!6}{3}\\
+Banking Operations and Financial Institutions Management & 3\\
+\cellcolor{gray!6}{Corporate Finance and Corporate Governance} & \cellcolor{gray!6}{3}\\
+Derivatives & 3\\
+\cellcolor{gray!6}{Elective} & \cellcolor{gray!6}{3}\\
 \addlinespace
-Year\_1 & SEM\_2 & Financial Econometrics\\
-\cellcolor{gray!6}{Year\_1} & \cellcolor{gray!6}{SEM\_2} & \cellcolor{gray!6}{Foundations of Finance}\\
-Year\_1 & SEM\_2 & Research Methods\\
-\cellcolor{gray!6}{Year\_1} & \cellcolor{gray!6}{SEM\_3} & \cellcolor{gray!6}{Intermediate Macroeconomics}\\
-Year\_1 & SEM\_3 & Asset management and portfolio formation\\
+Finance Macro-environment Analysis & 3\\
+\cellcolor{gray!6}{Financial Econometrics I} & \cellcolor{gray!6}{3}\\
+Financial Econometrics II & 3\\
+\cellcolor{gray!6}{Financial Economics} & \cellcolor{gray!6}{3}\\
+Financial Statements Analysis and Disclosures & 3\\
 \addlinespace
-\cellcolor{gray!6}{Year\_1} & \cellcolor{gray!6}{SEM\_3} & \cellcolor{gray!6}{Corporate Finance and Corporate Governance}\\
-Year\_1 & SEM\_3 & Emerging Markets and Financial Markets Development\\
-\cellcolor{gray!6}{Year\_1} & \cellcolor{gray!6}{SEM\_4} & \cellcolor{gray!6}{Research Project}\\
-Year\_1 & SEM\_4 & International Finance\\
-\cellcolor{gray!6}{Year\_1} & \cellcolor{gray!6}{SEM\_4} & \cellcolor{gray!6}{Banking Operations and Financial Institutions Management}\\
-\addlinespace
-Year\_1 & SEM\_4 & Derivatives\\
+\cellcolor{gray!6}{International Finance} & \cellcolor{gray!6}{3}\\
+Mathematical Methods for Finance & 3\\
+\cellcolor{gray!6}{Microeconomics} & \cellcolor{gray!6}{3}\\
+Research Methods & 3\\
+\cellcolor{gray!6}{Research Project} & \cellcolor{gray!6}{45}\\
 \bottomrule
 \end{tabu}
 \end{table}
