--- a/Untitled/Untitled.Rmd
+++ b/Untitled/Untitled.Rmd
@@ -48,19 +48,11 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 
 \subsection{Background Information}
 
-Karatina University was established as a full-fledged public university in Kenya through the award of charter on 1st March 2013. Situated 15km North of Karatina town, the university aspires to be one of the leading institutions of higher learning in Kenya and beyond. Karatina University offers quality education that is in tandem with the needs and aspirations of the global village as captured in our vision, mission and core values. The University locality is rich in agriculture soils and endowed with tourism attractions within the vicinity of snow-capped Mount Kenya. The serene environment makes it an ideal place for learning. This institution started in 2007 as Mount Kenya campus of Moi University. It had succeeded a tea training institute. In 2010 it became Karatina University College of Moi University and was chartered to a full-fledged University in 2013. The University has Six Academic Schools namely: School of Agriculture and Biotechnology, School of Business, School of Education and Social Sciences, School of Natural Resources and Environmental Studies, School of Nursing and School of Pure and Applied Sciences.
+Karatina University was established as a public university in Kenya through the charter award on 1st March 2013. Situated 15km North of Karatina town, the University aspires to be one of the leading institutions of higher learning in Kenya and beyond. Karatina University offers a quality education that is in tandem with the needs and aspirations of the global village as captured in our vision, mission and core values. The University locality is rich in agricultural soils and borders significant tourist attractions in Kenya: the snow-capped Mount Kenya and Mount Kenya National Park. The serene environment is ideal for learning. This institution started in 2007 as the Mount Kenya campus of Moi University. It had succeeded a tea training institute. In 2010 it became Karatina University College of Moi University and was chartered to a full-fledged University in 2013. The University has six academic schools: School of Agriculture and Biotechnology, School of Business, School of Education and Social Sciences, School of Natural Resources and Environmental Studies, School of Nursing and School of Pure and Applied Sciences.
 
-\section{STATEMENT OF THE FUNDAMENTAL VALUES OF THE UNIVERSITY}
 
-\subsection{Vision}
-
-To be a University of global excellence, meeting the dynamic needs and development of society
-
-\subsection{Mission}
-To conserve, create and disseminate knowledge through, training, research, innovation and community outreach
-
-\subsection{Philosophy of the University}
-Karatina University seek to create network that creates an environment that integrates disparate disciplines to conserve, create and disseminate knowledge that promotes development in a dynamic and developing society passionate in community outreach, research and innovation.  The University shall strive to develop programmes that will nurture leadership skills and innovation in all its graduates as well as enable them interact with the world wide community and contributing towards the development of solutions to a broad range of environmental, economics, entrepreneurial, social and scientific issues. This shall be facilitated by encouraging intellectual rigor that shall respects academic freedom and provide the necessary capacity needed by members of the University.
+\section{PHILOSOPHY OF THE UNIVERSITY}
+Karatina University seeks to create a network that creates an environment that integrates disparate disciplines to conserve, create and disseminate knowledge that promotes development in a dynamic and developing society passionate about community outreach, research and innovation.  The University shall strive to develop programmes that will nurture leadership skills and innovation in all its graduates, thus enabling them to interact with the worldwide community and develop solutions to various environmental, economic, entrepreneurial, social and scientific issues. These skills shall be facilitated by encouraging intellectual rigour that respects academic freedom and provides the necessary capacity needed by members of the University.
 
 \subsection{Core Values}
 The core values of the University are:
@@ -83,15 +75,23 @@ Probity
 
 \end{center}
 
+\subsection{Vision}
+
+To be a University of global excellence, meeting the dynamic needs and development of society
+
+\subsection{Mission}
+To conserve, create and disseminate knowledge through, training, research, innovation and community outreach
+
 
 \section{Minimum Admission Requirements}
 
-For admission to the `Master of Finance and Investments` program, the following requirements shall apply: 
+For admission to the **Master of Finance and Investments** program, the following requirements shall apply: 
 
-1. An undergraduate degree in Finance, Economics, Accounting, Mathematics, Statistics or any related quantitative discipline with a minimum score of second class honours, upper division. 
+1. An undergraduate degree in Finance, Economics, Accounting, Mathematics, Statistics or any related quantitative discipline with a minimum score of **Second Class Honors, Upper Division**. 
 
-2. Where condition (1) is not met, the applicant shall provide evidence of at least 2 years work experience in finance and related areas. 
+2. Where a prospective candidate has not attained a **Second Class Honors, Upper Division**, the applicant shall provide evidence of at least 2 years work experience in finance and related areas. 
 
+3. Candidates outside a quantitative discipline spelled out in (1) above, may be admitted to the degree if they have attained professional qualifications including but not limited to Certified Public Accountant (CPA), Association of Chartered Certified Accountants (ACCA), Certified Securities and Investments Analysts (CSIA), Chartered Financial Analyst (CFA), and Chartered Institute of Management Accountants (CIMA). 
 
 \subsection{Course Overview}
 
@@ -99,103 +99,69 @@ The Master in Finance & Investments program shall comprise the following courses
 
 
 ```{r}
-our_courses <- tribble(~ SEM_1, ~ SEM_2, ~ SEM_3, ~ SEM_4,
+tribble(
+        ~Year, ~Semester, ~Code, ~Course, ~CF,
         
-        "Microeconomics", "Finance Macro-environment Analysis", 
+        "1", "1", "ECO", "Microeconomics 1", "",
         
-        "Research Project", "Research Project",
+        "1", "1", "ECO", "Macroeconomics 1", "",
         
-        "", "", "", "",
-
+        "1", "1", "MBM", "Research Methods", "",
         
-        "Financial Econometrics I", "Financial Econometrics II", "Asset Pricing Theory", "",
+        "1", "1", "MFIN 800", "Corporate Finance 1", "",
         
-         "", "", "", "",
+        "1", "1", "MFIN 801", "Financial Mathematics", "",
         
-        "Financial Statements Analysis and Disclosures",
+        "1", "1", "MME 805", "Project Management", "",
         
-        "Corporate Finance and Corporate Governance", "Banking Operations and Financial Institutions Management", "",
         
-         "", "", "", "",
+        "------", "", "", "", "",
         
-        "Mathematical Methods for Finance", 
+        "1", "2", "ECO 800", "Microeconomics II", "",
         
-        "Financial Economics", "Derivatives", "", 
+        "1", "2", "MBM 800", "Business Statistics", "",
         
-         "", "", "", "",
+        "1", "2", "MFIN 802", "Financial Econometrics", "",
         
-        "Research Methods", "International Finance", "Elective", "") %>% 
+        "1", "2", "MFIN 803", "Corporate Finance II", "",
+        
+        "1", "2", "MFIN 804", "Financial Regulation and Compliance", "",
+        
+        "1", "2", "MFIN 805", "Financial Markets and Institutions", "",
+        
+        
+        "------", "", "", "", "",
+        
+        "1", "3", "MFIN 806", "Financial Econometrics II", "",
+        
+        "1", "3", "MFIN 807", "Derivatives and Risk Management", "",
+        
+        "1", "3", "MFIN 809", "Investments", "",
+        
+        "1", "3", "MFIN 810", "Finance Research Data Management and Analysis", "",
+        
+        "1", "3", "", "Elective", "",
+        
+        "1", "3", "", "Elective", "",
+        
+        "------", "", "", "", "",
+        
+        "2", "1", "", "Research Proposal", "",
+        
+        "2", "2", "", "Thesis", ""
+) %>% 
+        kbl(., booktabs = TRUE, 
+            caption = "Course Structure for the Master of Finance and Investments Program") %>% 
   
-  kbl(., booktabs = TRUE, caption = "Course Structure for the Master of Finance and Investments Program") %>% 
-  
-  kable_classic(latex_options = c("hold_position", "striped"), full_width = TRUE)
-
-our_courses
+  kable_classic(latex_options = c("hold_position", "striped"), 
+                
+                full_width = TRUE,
+                
+                font_size = 12)
 ```
 
 
-
-```{r}
-our_courses <- tribble(~ No, ~ SEM_1, ~ SEM_2, ~ SEM_3, ~ SEM_4,
-        
-        "Year_1", "Microeconomics", "Finance Macro-environment Analysis", 
-        
-        "Research Project", "", 
-        
-        "Year_1", "Financial Econometrics I", "Financial Econometrics II", "Asset Pricing Theory", "", 
-        
-        "Year_2", "Financial Statements Analysis and Disclosures",
-        
-        "Corporate Finance and Corporate Governance", "Banking Operations and Financial Institutions Management", "",
-        
-        "Year_2", "Mathematical Methods for Finance", 
-        
-        "Financial Economics", "Derivatives", "", 
-        
-        "Year_2", "Research Methods", "International Finance", "Elective", "") %>% 
-  
-  pivot_longer(-No, names_to = "Semester", values_to = "Course") %>% 
-  
-  rename(Year = No) %>% 
-  
-  arrange(Semester, Year) %>% 
-  
-  filter(Course != "") %>% 
-  
-  select(-Semester, -Year) %>% 
-  
-  mutate(Contact_Hours = case_when(
-    
-    Course == "Research Project" ~ 45,
-    
-    TRUE ~ 3
-    
-  )) %>% 
-  
-  arrange(Contact_Hours, Course) %>% 
-  
-  kbl(., booktabs = TRUE, caption = "Course Structure for the Master of Finance and Investments Program") %>% 
-  
-  kable_classic(latex_options = c("hold_position", "striped"), full_width = TRUE)
-
-our_courses
-```
 
 \section{Second Section}
 
-```{r results = "asis"}
-tab <- xtable(head(iris, n = 20), align = "|C|C|C|C|C|C|")
-
-addtorow <- list()
-addtorow$pos <- list()
-addtorow$pos[[1]] <- -1
-addtorow$command <- c("\\rowcolor{igray}")
-
-print(tab,
-      include.rownames = FALSE,
-      tabular.environment = "tabularx",
-      width = "\\textwidth",
-      comment = FALSE,
-      add.to.row = addtorow)
-```
 
