--- a/Untitled/Untitled.tex
+++ b/Untitled/Untitled.tex
@@ -44,50 +44,37 @@
 
 \subsection{Background Information}
 
-Karatina University was established as a full-fledged public university
-in Kenya through the award of charter on 1st March 2013. Situated 15km
-North of Karatina town, the university aspires to be one of the leading
+Karatina University was established as a public university in Kenya
+through the charter award on 1st March 2013. Situated 15km North of
+Karatina town, the University aspires to be one of the leading
 institutions of higher learning in Kenya and beyond. Karatina University
-offers quality education that is in tandem with the needs and
+offers a quality education that is in tandem with the needs and
 aspirations of the global village as captured in our vision, mission and
-core values. The University locality is rich in agriculture soils and
-endowed with tourism attractions within the vicinity of snow-capped
-Mount Kenya. The serene environment makes it an ideal place for
-learning. This institution started in 2007 as Mount Kenya campus of Moi
-University. It had succeeded a tea training institute. In 2010 it became
-Karatina University College of Moi University and was chartered to a
-full-fledged University in 2013. The University has Six Academic Schools
-namely: School of Agriculture and Biotechnology, School of Business,
+core values. The University locality is rich in agricultural soils and
+borders significant tourist attractions in Kenya: the snow-capped Mount
+Kenya and Mount Kenya National Park. The serene environment is ideal for
+learning. This institution started in 2007 as the Mount Kenya campus of
+Moi University. It had succeeded a tea training institute. In 2010 it
+became Karatina University College of Moi University and was chartered
+to a full-fledged University in 2013. The University has six academic
+schools: School of Agriculture and Biotechnology, School of Business,
 School of Education and Social Sciences, School of Natural Resources and
 Environmental Studies, School of Nursing and School of Pure and Applied
 Sciences.
 
-\section{STATEMENT OF THE FUNDAMENTAL VALUES OF THE UNIVERSITY}
+\section{PHILOSOPHY OF THE UNIVERSITY}
 
-\subsection{Vision}
-
-To be a University of global excellence, meeting the dynamic needs and
-development of society
-
-\subsection{Mission}
-
-To conserve, create and disseminate knowledge through, training,
-research, innovation and community outreach
-
-\subsection{Philosophy of the University}
-
-Karatina University seek to create network that creates an environment
-that integrates disparate disciplines to conserve, create and
-disseminate knowledge that promotes development in a dynamic and
-developing society passionate in community outreach, research and
+Karatina University seeks to create a network that creates an
+environment that integrates disparate disciplines to conserve, create
+and disseminate knowledge that promotes development in a dynamic and
+developing society passionate about community outreach, research and
 innovation. The University shall strive to develop programmes that will
-nurture leadership skills and innovation in all its graduates as well as
-enable them interact with the world wide community and contributing
-towards the development of solutions to a broad range of environmental,
-economics, entrepreneurial, social and scientific issues. This shall be
-facilitated by encouraging intellectual rigor that shall respects
-academic freedom and provide the necessary capacity needed by members of
-the University.
+nurture leadership skills and innovation in all its graduates, thus
+enabling them to interact with the worldwide community and develop
+solutions to various environmental, economic, entrepreneurial, social
+and scientific issues. These skills shall be facilitated by encouraging
+intellectual rigour that respects academic freedom and provides the
+necessary capacity needed by members of the University.
 
 \subsection{Core Values}
 
@@ -111,21 +98,39 @@ Probity
 
 \end{center}
 
+\subsection{Vision}
+
+To be a University of global excellence, meeting the dynamic needs and
+development of society
+
+\subsection{Mission}
+
+To conserve, create and disseminate knowledge through, training,
+research, innovation and community outreach
+
 \section{Minimum Admission Requirements}
 
-For admission to the Master of Finance and Investments programme, the
-following requirements shall apply:
+For admission to the \textbf{Master of Finance and Investments} program,
+the following requirements shall apply:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
   An undergraduate degree in Finance, Economics, Accounting,
-  Mathematics, Statistics or any related quantitative discipline.
+  Mathematics, Statistics or any related quantitative discipline with a
+  minimum score of \textbf{Second Class Honors, Upper Division}.
 \item
-  A minimum of second class honours for the undergraduate degree.
+  Where a prospective candidate has not attained a \textbf{Second Class
+  Honors, Upper Division}, the applicant shall provide evidence of at
+  least 2 years work experience in finance and related areas.
 \item
-  Where condition (2) is not met, a minimum of 2 years experience in
-  finance and related areas will suffice.
+  Candidates outside a quantitative discipline spelled out in (1) above,
+  may be admitted to the degree if they have attained professional
+  qualifications including but not limited to Certified Public
+  Accountant (CPA), Association of Chartered Certified Accountants
+  (ACCA), Certified Securities and Investments Analysts (CSIA),
+  Chartered Financial Analyst (CFA), and Chartered Institute of
+  Management Accountants (CIMA).
 \end{enumerate}
 
 \subsection{Course Overview}
@@ -134,87 +139,46 @@ The Master in Finance \& Investments program shall comprise the
 following courses.
 
 \begin{table}[!h]
-
+\centering
 \caption{\label{tab:unnamed-chunk-1}Course Structure for the Master of Finance and Investments Program}
 \centering
-\begin{tabu} to \linewidth {>{\raggedright}X>{\raggedright}X>{\raggedright}X>{\raggedright}X}
+\fontsize{12}{14}\selectfont
+\begin{tabu} to \linewidth {>{\raggedright}X>{\raggedright}X>{\raggedright}X>{\raggedright}X>{\raggedright}X}
 \toprule
-SEM\_1 & SEM\_2 & SEM\_3 & SEM\_4\\
+Year & Semester & Code & Course & CF\\
 \midrule
-\cellcolor{gray!6}{Microeconomics} & \cellcolor{gray!6}{Finance Macro-environment Analysis} & \cellcolor{gray!6}{Research Project} & \cellcolor{gray!6}{Research Project}\\
- &  &  \vphantom{3} & \\
-\cellcolor{gray!6}{Financial Econometrics I} & \cellcolor{gray!6}{Financial Econometrics II} & \cellcolor{gray!6}{Asset Pricing Theory} & \cellcolor{gray!6}{}\\
- &  &  \vphantom{2} & \\
-\cellcolor{gray!6}{Financial Statements Analysis and Disclosures} & \cellcolor{gray!6}{Corporate Finance and Corporate Governance} & \cellcolor{gray!6}{Banking Operations and Financial Institutions Management} & \cellcolor{gray!6}{}\\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{1} & \cellcolor{gray!10}{ECO} & \cellcolor{gray!10}{Microeconomics 1} & \cellcolor{gray!10}{}\\
+1 & 1 & ECO & Macroeconomics 1 & \\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{1} & \cellcolor{gray!10}{MBM} & \cellcolor{gray!10}{Research Methods} & \cellcolor{gray!10}{}\\
+1 & 1 & MFIN 800 & Corporate Finance 1 & \\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{1} & \cellcolor{gray!10}{MFIN 801} & \cellcolor{gray!10}{Financial Mathematics} & \cellcolor{gray!10}{}\\
 \addlinespace
- &  &  \vphantom{1} & \\
-\cellcolor{gray!6}{Mathematical Methods for Finance} & \cellcolor{gray!6}{Financial Economics} & \cellcolor{gray!6}{Derivatives} & \cellcolor{gray!6}{}\\
- &  &  & \\
-\cellcolor{gray!6}{Research Methods} & \cellcolor{gray!6}{International Finance} & \cellcolor{gray!6}{Elective} & \cellcolor{gray!6}{}\\
-\bottomrule
-\end{tabu}
-\end{table}
-
-\begin{table}[!h]
-
-\caption{\label{tab:unnamed-chunk-2}Course Structure for the Master of Finance Program}
-\centering
-\begin{tabu} to \linewidth {>{\raggedright}X>{\raggedleft}X}
-\toprule
-Course & Contact\_Hours\\
-\midrule
-\cellcolor{gray!6}{Asset Pricing Theory} & \cellcolor{gray!6}{3}\\
-Banking Operations and Financial Institutions Management & 3\\
-\cellcolor{gray!6}{Corporate Finance and Corporate Governance} & \cellcolor{gray!6}{3}\\
-Derivatives & 3\\
-\cellcolor{gray!6}{Elective} & \cellcolor{gray!6}{3}\\
+1 & 1 & MME 805 & Project Management & \\
+\cellcolor{gray!10}{------} & \cellcolor{gray!10}{} & \cellcolor{gray!10}{} & \cellcolor{gray!10}{ \vphantom{2}} & \cellcolor{gray!10}{}\\
+1 & 2 & ECO 800 & Microeconomics II & \\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{2} & \cellcolor{gray!10}{MBM 800} & \cellcolor{gray!10}{Business Statistics} & \cellcolor{gray!10}{}\\
+1 & 2 & MFIN 802 & Financial Econometrics & \\
 \addlinespace
-Finance Macro-environment Analysis & 3\\
-\cellcolor{gray!6}{Financial Econometrics I} & \cellcolor{gray!6}{3}\\
-Financial Econometrics II & 3\\
-\cellcolor{gray!6}{Financial Economics} & \cellcolor{gray!6}{3}\\
-Financial Statements Analysis and Disclosures & 3\\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{2} & \cellcolor{gray!10}{MFIN 803} & \cellcolor{gray!10}{Corporate Finance II} & \cellcolor{gray!10}{}\\
+1 & 2 & MFIN 804 & Financial Regulation and Compliance & \\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{2} & \cellcolor{gray!10}{MFIN 805} & \cellcolor{gray!10}{Financial Markets and Institutions} & \cellcolor{gray!10}{}\\
+------ &  &  &  \vphantom{1} & \\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{3} & \cellcolor{gray!10}{MFIN 806} & \cellcolor{gray!10}{Financial Econometrics II} & \cellcolor{gray!10}{}\\
 \addlinespace
-\cellcolor{gray!6}{International Finance} & \cellcolor{gray!6}{3}\\
-Mathematical Methods for Finance & 3\\
-\cellcolor{gray!6}{Microeconomics} & \cellcolor{gray!6}{3}\\
-Research Methods & 3\\
-\cellcolor{gray!6}{Research Project} & \cellcolor{gray!6}{45}\\
+1 & 3 & MFIN 807 & Derivatives and Risk Management & \\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{3} & \cellcolor{gray!10}{MFIN 809} & \cellcolor{gray!10}{Investments} & \cellcolor{gray!10}{}\\
+1 & 3 & MFIN 810 & Finance Research Data Management and Analysis & \\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{3} & \cellcolor{gray!10}{} & \cellcolor{gray!10}{Elective \vphantom{1}} & \cellcolor{gray!10}{}\\
+1 & 3 &  & Elective & \\
+\addlinespace
+\cellcolor{gray!10}{------} & \cellcolor{gray!10}{} & \cellcolor{gray!10}{} & \cellcolor{gray!10}{} & \cellcolor{gray!10}{}\\
+2 & 1 &  & Research Proposal & \\
+\cellcolor{gray!10}{2} & \cellcolor{gray!10}{2} & \cellcolor{gray!10}{} & \cellcolor{gray!10}{Thesis} & \cellcolor{gray!10}{}\\
 \bottomrule
 \end{tabu}
 \end{table}
 
 \section{Second Section}
-
-\begin{table}[ht]
-\centering
-\begin{tabularx}{\textwidth}{|C|C|C|C|C|}
-  \rowcolor{igray} \hline
-Sepal.Length & Sepal.Width & Petal.Length & Petal.Width & Species \\ 
-  \hline
-5.10 & 3.50 & 1.40 & 0.20 & setosa \\ 
-  4.90 & 3.00 & 1.40 & 0.20 & setosa \\ 
-  4.70 & 3.20 & 1.30 & 0.20 & setosa \\ 
-  4.60 & 3.10 & 1.50 & 0.20 & setosa \\ 
-  5.00 & 3.60 & 1.40 & 0.20 & setosa \\ 
-  5.40 & 3.90 & 1.70 & 0.40 & setosa \\ 
-  4.60 & 3.40 & 1.40 & 0.30 & setosa \\ 
-  5.00 & 3.40 & 1.50 & 0.20 & setosa \\ 
-  4.40 & 2.90 & 1.40 & 0.20 & setosa \\ 
-  4.90 & 3.10 & 1.50 & 0.10 & setosa \\ 
-  5.40 & 3.70 & 1.50 & 0.20 & setosa \\ 
-  4.80 & 3.40 & 1.60 & 0.20 & setosa \\ 
-  4.80 & 3.00 & 1.40 & 0.10 & setosa \\ 
-  4.30 & 3.00 & 1.10 & 0.10 & setosa \\ 
-  5.80 & 4.00 & 1.20 & 0.20 & setosa \\ 
-  5.70 & 4.40 & 1.50 & 0.40 & setosa \\ 
-  5.40 & 3.90 & 1.30 & 0.40 & setosa \\ 
-  5.10 & 3.50 & 1.40 & 0.30 & setosa \\ 
-  5.70 & 3.80 & 1.70 & 0.30 & setosa \\ 
-  5.10 & 3.80 & 1.50 & 0.30 & setosa \\ 
-   \hline
-\end{tabularx}
-\end{table}
 
 
 \end{document}
