Updated some typos

--- a/Untitled/Untitled.Rmd
+++ b/Untitled/Untitled.Rmd
@@ -77,10 +77,10 @@ Probity
 
 \subsection{Vision}
 
-To be a University of global excellence, meeting the dynamic needs and development of society
+To be a University of global excellence, meeting the dynamic needs and development of society.
 
 \subsection{Mission}
-To conserve, create and disseminate knowledge through, training, research, innovation and community outreach
+To conserve, create and disseminate knowledge through, training, research, innovation and community outreach.
 
 
 \section{Minimum Admission Requirements}
@@ -91,7 +91,7 @@ For admission to the **Master of Finance and Investments** program, the followin
 
 2. Where a prospective candidate has not attained a **Second Class Honors, Upper Division**, the applicant shall provide evidence of at least 2 years work experience in finance and related areas. 
 
-3. Candidates outside a quantitative discipline spelled out in (1) above, may be admitted to the degree if they have attained professional qualifications including but not limited to Certified Public Accountant (CPA), Association of Chartered Certified Accountants (ACCA), Certified Securities and Investments Analysts (CSIA), Chartered Financial Analyst (CFA), and Chartered Institute of Management Accountants (CIMA). 
+3. Candidates without a degree in a quantitative discipline spelled out in (1) above, may be admitted to the degree if they have attained professional qualifications including but not limited to Certified Public Accountant (CPA), Association of Chartered Certified Accountants (ACCA), Certified Securities and Investments Analysts (CSIA), Chartered Financial Analyst (CFA), and Chartered Institute of Management Accountants (CIMA). 
 
 \subsection{Course Overview}
 
